compilador lola/parser.out
Grammar:

Rule 0     S' -> lola
Rule 1     lola -> modulo
Rule 2     lola -> lola modulo
Rule 3     tipoSimple -> ID
Rule 4     tipoSimple -> ID ( listaExpresiones )
Rule 5     tipoSimple -> tipoBasico
Rule 6     tipoBasico -> error
Rule 7     tipoBasico -> OC
Rule 8     tipoBasico -> TS
Rule 9     tipoBasico -> BIT
Rule 10    listaExpresiones -> expresion
Rule 11    listaExpresiones -> listaExpresiones , expresion
Rule 12    tipo -> tipoExpresiones tipoSimple
Rule 13    tipoExpresiones -> empty
Rule 14    tipoExpresiones -> tipoExpresionesR
Rule 15    tipoExpresionesR -> [ expresion ]
Rule 16    tipoExpresionesR -> tipoExpresionesR [ expresion ]
Rule 17    declaracionConstante -> error
Rule 18    declaracionConstante -> ID DOSPUNTOSIGUAL expresion ;
Rule 19    declaracionVariable -> listaId error
Rule 20    declaracionVariable -> listaId : tipo ;
Rule 21    listaId -> error
Rule 22    listaId -> ID
Rule 23    listaId -> listaId , ID
Rule 24    selector -> empty
Rule 25    selector -> selectorR
Rule 26    selectorR -> selectorRR
Rule 27    selectorR -> selectorR selectorRR
Rule 28    selectorRR -> [ expresion ]
Rule 29    selectorRR -> . INTEGER
Rule 30    selectorRR -> . ID
Rule 31    factor -> SR ( expresion , expresion )
Rule 32    factor -> LATCH ( expresion , expresion )
Rule 33    factor -> REG ( expresion , expresion )
Rule 34    factor -> REG ( expresion )
Rule 35    factor -> MUX ( expresion , expresion : expresion , expresion , expresion , expresion )
Rule 36    factor -> MUX ( expresion : expresion , expresion )
Rule 37    factor -> ( expresion )
Rule 38    factor -> ~ factor
Rule 39    factor -> FLECHAARRIBA factor
Rule 40    factor -> INTEGER
Rule 41    factor -> LOGICVALUE
Rule 42    factor -> ID selector
Rule 43    termino -> error factor
Rule 44    termino -> factor
Rule 45    termino -> termino MOD factor
Rule 46    termino -> termino DIV factor
Rule 47    termino -> termino / factor
Rule 48    termino -> termino * factor
Rule 49    expresion -> termino
Rule 50    expresion -> expresion - termino
Rule 51    expresion -> expresion + termino
Rule 52    asignacion -> ID selector DOSPUNTOSIGUAL condicion | expresion
Rule 53    asignacion -> ID selector DOSPUNTOSIGUAL expresion
Rule 54    condicion -> expresion
Rule 55    relacion -> expresion MAYORIGUAL expresion
Rule 56    relacion -> expresion > expresion
Rule 57    relacion -> expresion MENORIGUAL expresion
Rule 58    relacion -> expresion < expresion
Rule 59    relacion -> expresion # expresion
Rule 60    relacion -> expresion = expresion
Rule 61    sentenciaSi -> IF relacion THEN sentenciaSecuencia sentenciaSiSino sentenciaSiEntonces END
Rule 62    sentenciaSiSino -> empty
Rule 63    sentenciaSiSino -> sentenciaSiSinoR
Rule 64    sentenciaSiSinoR -> ELSIF relacion THEN sentenciaSecuencia
Rule 65    sentenciaSiSinoR -> sentenciaSiSinoR ELSIF relacion THEN sentenciaSecuencia
Rule 66    sentenciaSiEntonces -> empty
Rule 67    sentenciaSiEntonces -> ELSE sentenciaSecuencia
Rule 68    sentenciaPara -> FOR ID DOSPUNTOSIGUAL expresion DOBLEPUNTO expresion DO sentenciaSecuencia END
Rule 69    sentencia -> empty
Rule 70    sentencia -> sentenciaPara
Rule 71    sentencia -> sentenciaSi
Rule 72    sentencia -> asignacionUnidad
Rule 73    sentencia -> asignacion
Rule 74    sentenciaSecuencia -> sentencia
Rule 75    sentenciaSecuencia -> sentenciaSecuencia ; sentencia
Rule 76    modulo -> MODULE ID ; error
Rule 77    modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
Rule 78    declaracionTipoPuntoComa -> empty
Rule 79    declaracionTipoPuntoComa -> declaracionTipoPuntoComaR
Rule 80    declaracionTipoPuntoComaR -> declaracionTipo ;
Rule 81    declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ;
Rule 82    declaracionConstanteCONST -> empty
Rule 83    declaracionConstanteCONST -> CONST declaracionConstanteRecursivo
Rule 84    declaracionConstanteRecursivo -> empty
Rule 85    declaracionConstanteRecursivo -> declaracionConstanteRecursivoR
Rule 86    declaracionConstanteRecursivoR -> declaracionConstante
Rule 87    declaracionConstanteRecursivoR -> declaracionConstanteRecursivoR declaracionConstante
Rule 88    declaracionVariableIN -> empty
Rule 89    declaracionVariableIN -> IN declaracionVariableRecursivo
Rule 90    declaracionVariableRecursivo -> empty
Rule 91    declaracionVariableRecursivo -> declaracionVariableRecursivoR
Rule 92    declaracionVariableRecursivoR -> declaracionVariable
Rule 93    declaracionVariableRecursivoR -> declaracionVariableRecursivoR declaracionVariable
Rule 94    declaracionVariableINOUT -> empty
Rule 95    declaracionVariableINOUT -> INOUT declaracionVariableRecursivo
Rule 96    declaracionVariableOUT -> empty
Rule 97    declaracionVariableOUT -> OUT declaracionVariableRecursivo
Rule 98    declaracionVariableVAR -> empty
Rule 99    declaracionVariableVAR -> VAR declaracionVariableRecursivo
Rule 100   declaracionRelacionPOS -> empty
Rule 101   declaracionRelacionPOS -> POS declaracionRelacionRecursivo
Rule 102   declaracionRelacionRecursivo -> empty
Rule 103   declaracionRelacionRecursivo -> declaracionRelacionR
Rule 104   declaracionRelacionR -> relacion ;
Rule 105   declaracionRelacionR -> declaracionRelacionR relacion ;
Rule 106   sentenciaSecuenciaBEGIN -> empty
Rule 107   sentenciaSecuenciaBEGIN -> BEGIN sentenciaSecuencia
Rule 108   tipoFormal -> error
Rule 109   tipoFormal -> expresionCorcheteO BIT
Rule 110   expresionCorcheteO -> empty
Rule 111   expresionCorcheteO -> expresionCorcheteOR
Rule 112   expresionCorcheteOR -> [ expresionOpcional ]
Rule 113   expresionCorcheteOR -> expresionCorcheteOR [ expresionOpcional ]
Rule 114   expresionOpcional -> empty
Rule 115   expresionOpcional -> expresion
Rule 116   tipoFormalBus -> error
Rule 117   tipoFormalBus -> expresionCorcheteO OC
Rule 118   tipoFormalBus -> expresionCorcheteO TS
Rule 119   declaracionTipo -> TYPE ID error
Rule 120   declaracionTipo -> TYPE ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
Rule 121   simboloPor -> empty
Rule 122   simboloPor -> *
Rule 123   listaIdParentesis -> empty
Rule 124   listaIdParentesis -> ( listaId )
Rule 125   tipoFormalIN -> empty
Rule 126   tipoFormalIN -> IN tipoFormallistaId
Rule 127   tipoFormallistaId -> empty
Rule 128   tipoFormallistaId -> tipoFormallistaIdR
Rule 129   tipoFormallistaIdR -> listaId : tipoFormal ;
Rule 130   tipoFormallistaIdR -> tipoFormallistaIdR listaId : tipoFormal ;
Rule 131   tipoFormalINOUT -> empty
Rule 132   tipoFormalINOUT -> INOUT tipoFormlBuslistaId
Rule 133   tipoFormlBuslistaId -> empty
Rule 134   tipoFormlBuslistaId -> tipoFormlBuslistaIdR
Rule 135   tipoFormlBuslistaIdR -> listaId : tipoFormalBus ;
Rule 136   tipoFormlBuslistaIdR -> tipoFormlBuslistaIdR listaId : tipoFormalBus ;
Rule 137   asignacionUnidad -> error
Rule 138   asignacionUnidad -> ID selector ( listaExpresiones )
Rule 139   empty -> <empty>

Terminals, with rules where they appear:

#                    : 59
(                    : 4 31 32 33 34 35 36 37 124 138
)                    : 4 31 32 33 34 35 36 37 124 138
*                    : 48 122
+                    : 51
,                    : 11 23 31 32 33 35 35 35 35 36
-                    : 50
.                    : 29 30 77
/                    : 47
:                    : 20 35 36 129 130 135 136
;                    : 18 20 75 76 77 80 81 104 105 120 129 130 135 136
<                    : 58
=                    : 60
>                    : 56
BEGIN                : 107
BIT                  : 9 109
CONST                : 83
DIV                  : 46
DO                   : 68
DOBLEPUNTO           : 68
DOSPUNTOSIGUAL       : 18 52 53 68
ELSE                 : 67
ELSIF                : 64 65
END                  : 61 68 77 120
FLECHAARRIBA         : 39
FOR                  : 68
ID                   : 3 4 18 22 23 30 42 52 53 68 76 77 77 119 120 120 138
IF                   : 61
IN                   : 89 126
INOUT                : 95 132
INTEGER              : 29 40
LATCH                : 32
LOGICVALUE           : 41
MAYORIGUAL           : 55
MENORIGUAL           : 57
MOD                  : 45
MODULE               : 76 77
MUX                  : 35 36
OC                   : 7 117
OUT                  : 97
POS                  : 101
REG                  : 33 34
SR                   : 31
THEN                 : 61 64 65
TS                   : 8 118
TYPE                 : 119 120
VAR                  : 99
[                    : 15 16 28 112 113
]                    : 15 16 28 112 113
error                : 6 17 19 21 43 76 108 116 119 137
|                    : 52
~                    : 38

Nonterminals, with rules where they appear:

asignacion           : 73
asignacionUnidad     : 72
condicion            : 52
declaracionConstante : 86 87
declaracionConstanteCONST : 77 120
declaracionConstanteRecursivo : 83
declaracionConstanteRecursivoR : 85 87
declaracionRelacionPOS : 77 120
declaracionRelacionR : 103 105
declaracionRelacionRecursivo : 101
declaracionTipo      : 80 81
declaracionTipoPuntoComa : 77
declaracionTipoPuntoComaR : 79 81
declaracionVariable  : 92 93
declaracionVariableIN : 77
declaracionVariableINOUT : 77
declaracionVariableOUT : 77 120
declaracionVariableRecursivo : 89 95 97 99
declaracionVariableRecursivoR : 91 93
declaracionVariableVAR : 77 120
empty                : 13 24 62 66 69 78 82 84 88 90 94 96 98 100 102 106 110 114 121 123 125 127 131 133
expresion            : 10 11 15 16 18 28 31 31 32 32 33 33 34 35 35 35 35 35 35 36 36 36 37 50 51 52 53 54 55 55 56 56 57 57 58 58 59 59 60 60 68 68 115
expresionCorcheteO   : 109 117 118
expresionCorcheteOR  : 111 113
expresionOpcional    : 112 113
factor               : 38 39 43 44 45 46 47 48
listaExpresiones     : 4 11 138
listaId              : 19 20 23 124 129 130 135 136
listaIdParentesis    : 120
lola                 : 2 0
modulo               : 1 2
relacion             : 61 64 65 104 105
selector             : 42 52 53 138
selectorR            : 25 27
selectorRR           : 26 27
sentencia            : 74 75
sentenciaPara        : 70
sentenciaSecuencia   : 61 64 65 67 68 75 107
sentenciaSecuenciaBEGIN : 77 120
sentenciaSi          : 71
sentenciaSiEntonces  : 61
sentenciaSiSino      : 61
sentenciaSiSinoR     : 63 65
simboloPor           : 120
termino              : 45 46 47 48 49 50 51
tipo                 : 20
tipoBasico           : 5
tipoExpresiones      : 12
tipoExpresionesR     : 14 16
tipoFormal           : 129 130
tipoFormalBus        : 135 136
tipoFormalIN         : 120
tipoFormalINOUT      : 120
tipoFormallistaId    : 126
tipoFormallistaIdR   : 128 130
tipoFormlBuslistaId  : 132
tipoFormlBuslistaIdR : 134 136
tipoSimple           : 12


state 0

    (0) S' -> . lola
    (1) lola -> . modulo
    (2) lola -> . lola modulo
    (76) modulo -> . MODULE ID ; error
    (77) modulo -> . MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    MODULE          shift and go to state 3

    lola                           shift and go to state 1
    modulo                         shift and go to state 2

state 1

    (0) S' -> lola .
    (2) lola -> lola . modulo
    (76) modulo -> . MODULE ID ; error
    (77) modulo -> . MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    MODULE          shift and go to state 3

    modulo                         shift and go to state 4

state 2

    (1) lola -> modulo .
    MODULE          reduce using rule 1 (lola -> modulo .)
    $end            reduce using rule 1 (lola -> modulo .)


state 3

    (76) modulo -> MODULE . ID ; error
    (77) modulo -> MODULE . ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    ID              shift and go to state 5


state 4

    (2) lola -> lola modulo .
    MODULE          reduce using rule 2 (lola -> lola modulo .)
    $end            reduce using rule 2 (lola -> lola modulo .)


state 5

    (76) modulo -> MODULE ID . ; error
    (77) modulo -> MODULE ID . ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    ;               shift and go to state 6


state 6

    (76) modulo -> MODULE ID ; . error
    (77) modulo -> MODULE ID ; . declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (78) declaracionTipoPuntoComa -> . empty
    (79) declaracionTipoPuntoComa -> . declaracionTipoPuntoComaR
    (139) empty -> .
    (80) declaracionTipoPuntoComaR -> . declaracionTipo ;
    (81) declaracionTipoPuntoComaR -> . declaracionTipoPuntoComaR declaracionTipo ;
    (119) declaracionTipo -> . TYPE ID error
    (120) declaracionTipo -> . TYPE ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    error           shift and go to state 7
    CONST           reduce using rule 139 (empty -> .)
    IN              reduce using rule 139 (empty -> .)
    INOUT           reduce using rule 139 (empty -> .)
    OUT             reduce using rule 139 (empty -> .)
    VAR             reduce using rule 139 (empty -> .)
    POS             reduce using rule 139 (empty -> .)
    BEGIN           reduce using rule 139 (empty -> .)
    END             reduce using rule 139 (empty -> .)
    TYPE            shift and go to state 12

    declaracionTipoPuntoComa       shift and go to state 8
    empty                          shift and go to state 9
    declaracionTipoPuntoComaR      shift and go to state 10
    declaracionTipo                shift and go to state 11

state 7

    (76) modulo -> MODULE ID ; error .
    MODULE          reduce using rule 76 (modulo -> MODULE ID ; error .)
    $end            reduce using rule 76 (modulo -> MODULE ID ; error .)


state 8

    (77) modulo -> MODULE ID ; declaracionTipoPuntoComa . declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (82) declaracionConstanteCONST -> . empty
    (83) declaracionConstanteCONST -> . CONST declaracionConstanteRecursivo
    (139) empty -> .
    CONST           shift and go to state 15
    IN              reduce using rule 139 (empty -> .)
    INOUT           reduce using rule 139 (empty -> .)
    OUT             reduce using rule 139 (empty -> .)
    VAR             reduce using rule 139 (empty -> .)
    POS             reduce using rule 139 (empty -> .)
    BEGIN           reduce using rule 139 (empty -> .)
    END             reduce using rule 139 (empty -> .)

    declaracionConstanteCONST      shift and go to state 13
    empty                          shift and go to state 14

state 9

    (78) declaracionTipoPuntoComa -> empty .
    CONST           reduce using rule 78 (declaracionTipoPuntoComa -> empty .)
    IN              reduce using rule 78 (declaracionTipoPuntoComa -> empty .)
    INOUT           reduce using rule 78 (declaracionTipoPuntoComa -> empty .)
    OUT             reduce using rule 78 (declaracionTipoPuntoComa -> empty .)
    VAR             reduce using rule 78 (declaracionTipoPuntoComa -> empty .)
    POS             reduce using rule 78 (declaracionTipoPuntoComa -> empty .)
    BEGIN           reduce using rule 78 (declaracionTipoPuntoComa -> empty .)
    END             reduce using rule 78 (declaracionTipoPuntoComa -> empty .)


state 10

    (79) declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .
    (81) declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR . declaracionTipo ;
    (119) declaracionTipo -> . TYPE ID error
    (120) declaracionTipo -> . TYPE ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    CONST           reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    IN              reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    INOUT           reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    OUT             reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    VAR             reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    POS             reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    BEGIN           reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    END             reduce using rule 79 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    TYPE            shift and go to state 12

    declaracionTipo                shift and go to state 16

state 11

    (80) declaracionTipoPuntoComaR -> declaracionTipo . ;
    ;               shift and go to state 17


state 12

    (119) declaracionTipo -> TYPE . ID error
    (120) declaracionTipo -> TYPE . ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    ID              shift and go to state 18


state 13

    (77) modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST . declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (88) declaracionVariableIN -> . empty
    (89) declaracionVariableIN -> . IN declaracionVariableRecursivo
    (139) empty -> .
    IN              shift and go to state 21
    INOUT           reduce using rule 139 (empty -> .)
    OUT             reduce using rule 139 (empty -> .)
    VAR             reduce using rule 139 (empty -> .)
    POS             reduce using rule 139 (empty -> .)
    BEGIN           reduce using rule 139 (empty -> .)
    END             reduce using rule 139 (empty -> .)

    declaracionVariableIN          shift and go to state 19
    empty                          shift and go to state 20

state 14

    (82) declaracionConstanteCONST -> empty .
    IN              reduce using rule 82 (declaracionConstanteCONST -> empty .)
    INOUT           reduce using rule 82 (declaracionConstanteCONST -> empty .)
    OUT             reduce using rule 82 (declaracionConstanteCONST -> empty .)
    VAR             reduce using rule 82 (declaracionConstanteCONST -> empty .)
    POS             reduce using rule 82 (declaracionConstanteCONST -> empty .)
    BEGIN           reduce using rule 82 (declaracionConstanteCONST -> empty .)
    END             reduce using rule 82 (declaracionConstanteCONST -> empty .)


state 15

    (83) declaracionConstanteCONST -> CONST . declaracionConstanteRecursivo
    (84) declaracionConstanteRecursivo -> . empty
    (85) declaracionConstanteRecursivo -> . declaracionConstanteRecursivoR
    (139) empty -> .
    (86) declaracionConstanteRecursivoR -> . declaracionConstante
    (87) declaracionConstanteRecursivoR -> . declaracionConstanteRecursivoR declaracionConstante
    (17) declaracionConstante -> . error
    (18) declaracionConstante -> . ID DOSPUNTOSIGUAL expresion ;
    IN              reduce using rule 139 (empty -> .)
    INOUT           reduce using rule 139 (empty -> .)
    OUT             reduce using rule 139 (empty -> .)
    VAR             reduce using rule 139 (empty -> .)
    POS             reduce using rule 139 (empty -> .)
    BEGIN           reduce using rule 139 (empty -> .)
    END             reduce using rule 139 (empty -> .)
    error           shift and go to state 26
    ID              shift and go to state 27

    declaracionConstanteRecursivo  shift and go to state 22
    empty                          shift and go to state 23
    declaracionConstanteRecursivoR shift and go to state 24
    declaracionConstante           shift and go to state 25

state 16

    (81) declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo . ;
    ;               shift and go to state 28


state 17

    (80) declaracionTipoPuntoComaR -> declaracionTipo ; .
    TYPE            reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    CONST           reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    IN              reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    INOUT           reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    OUT             reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    VAR             reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    POS             reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    BEGIN           reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    END             reduce using rule 80 (declaracionTipoPuntoComaR -> declaracionTipo ; .)


state 18

    (119) declaracionTipo -> TYPE ID . error
    (120) declaracionTipo -> TYPE ID . simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    (121) simboloPor -> . empty
    (122) simboloPor -> . *
    (139) empty -> .
    error           shift and go to state 29
    *               shift and go to state 32
    (               reduce using rule 139 (empty -> .)
    ;               reduce using rule 139 (empty -> .)

    simboloPor                     shift and go to state 30
    empty                          shift and go to state 31

state 19

    (77) modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN . declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (94) declaracionVariableINOUT -> . empty
    (95) declaracionVariableINOUT -> . INOUT declaracionVariableRecursivo
    (139) empty -> .
    INOUT           shift and go to state 35
    OUT             reduce using rule 139 (empty -> .)
    VAR             reduce using rule 139 (empty -> .)
    POS             reduce using rule 139 (empty -> .)
    BEGIN           reduce using rule 139 (empty -> .)
    END             reduce using rule 139 (empty -> .)

    declaracionVariableINOUT       shift and go to state 33
    empty                          shift and go to state 34

state 20

    (88) declaracionVariableIN -> empty .
    INOUT           reduce using rule 88 (declaracionVariableIN -> empty .)
    OUT             reduce using rule 88 (declaracionVariableIN -> empty .)
    VAR             reduce using rule 88 (declaracionVariableIN -> empty .)
    POS             reduce using rule 88 (declaracionVariableIN -> empty .)
    BEGIN           reduce using rule 88 (declaracionVariableIN -> empty .)
    END             reduce using rule 88 (declaracionVariableIN -> empty .)


state 21

    (89) declaracionVariableIN -> IN . declaracionVariableRecursivo
    (90) declaracionVariableRecursivo -> . empty
    (91) declaracionVariableRecursivo -> . declaracionVariableRecursivoR
    (139) empty -> .
    (92) declaracionVariableRecursivoR -> . declaracionVariable
    (93) declaracionVariableRecursivoR -> . declaracionVariableRecursivoR declaracionVariable
    (19) declaracionVariable -> . listaId error
    (20) declaracionVariable -> . listaId : tipo ;
    (21) listaId -> . error
    (22) listaId -> . ID
    (23) listaId -> . listaId , ID
    INOUT           reduce using rule 139 (empty -> .)
    OUT             reduce using rule 139 (empty -> .)
    VAR             reduce using rule 139 (empty -> .)
    POS             reduce using rule 139 (empty -> .)
    BEGIN           reduce using rule 139 (empty -> .)
    END             reduce using rule 139 (empty -> .)
    error           shift and go to state 41
    ID              shift and go to state 42

    declaracionVariableRecursivo   shift and go to state 36
    empty                          shift and go to state 37
    declaracionVariableRecursivoR  shift and go to state 38
    declaracionVariable            shift and go to state 39
    listaId                        shift and go to state 40

state 22

    (83) declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .
    IN              reduce using rule 83 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    INOUT           reduce using rule 83 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    OUT             reduce using rule 83 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    VAR             reduce using rule 83 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    POS             reduce using rule 83 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    BEGIN           reduce using rule 83 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    END             reduce using rule 83 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)


state 23

    (84) declaracionConstanteRecursivo -> empty .
    IN              reduce using rule 84 (declaracionConstanteRecursivo -> empty .)
    INOUT           reduce using rule 84 (declaracionConstanteRecursivo -> empty .)
    OUT             reduce using rule 84 (declaracionConstanteRecursivo -> empty .)
    VAR             reduce using rule 84 (declaracionConstanteRecursivo -> empty .)
    POS             reduce using rule 84 (declaracionConstanteRecursivo -> empty .)
    BEGIN           reduce using rule 84 (declaracionConstanteRecursivo -> empty .)
    END             reduce using rule 84 (declaracionConstanteRecursivo -> empty .)


state 24

    (85) declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .
    (87) declaracionConstanteRecursivoR -> declaracionConstanteRecursivoR . declaracionConstante
    (17) declaracionConstante -> . error
    (18) declaracionConstante -> . ID DOSPUNTOSIGUAL expresion ;
    IN              reduce using rule 85 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    INOUT           reduce using rule 85 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    OUT             reduce using rule 85 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    VAR             reduce using rule 85 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    POS             reduce using rule 85 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    BEGIN           reduce using rule 85 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    END             reduce using rule 85 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    error           shift and go to state 26
    ID              shift and go to state 27

    declaracionConstante           shift and go to state 43

state 25

    (86) declaracionConstanteRecursivoR -> declaracionConstante .
    error           reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    ID              reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    IN              reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    INOUT           reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    OUT             reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    VAR             reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    POS             reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    BEGIN           reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)
    END             reduce using rule 86 (declaracionConstanteRecursivoR -> declaracionConstante .)


state 26

    (17) declaracionConstante -> error .
    error           reduce using rule 17 (declaracionConstante -> error .)
    ID              reduce using rule 17 (declaracionConstante -> error .)
    IN              reduce using rule 17 (declaracionConstante -> error .)
    INOUT           reduce using rule 17 (declaracionConstante -> error .)
    OUT             reduce using rule 17 (declaracionConstante -> error .)
    VAR             reduce using rule 17 (declaracionConstante -> error .)
    POS             reduce using rule 17 (declaracionConstante -> error .)
    BEGIN           reduce using rule 17 (declaracionConstante -> error .)
    END             reduce using rule 17 (declaracionConstante -> error .)


state 27

    (18) declaracionConstante -> ID . DOSPUNTOSIGUAL expresion ;
    DOSPUNTOSIGUAL  shift and go to state 44


state 28

    (81) declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .
    TYPE            reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    CONST           reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    IN              reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    INOUT           reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    OUT             reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    VAR             reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    POS             reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    BEGIN           reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    END             reduce using rule 81 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)


state 29

    (119) declaracionTipo -> TYPE ID error .
    ;               reduce using rule 119 (declaracionTipo -> TYPE ID error .)


state 30

    (120) declaracionTipo -> TYPE ID simboloPor . listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    (123) listaIdParentesis -> . empty
    (124) listaIdParentesis -> . ( listaId )
    (139) empty -> .
    (               shift and go to state 47
    ;               reduce using rule 139 (empty -> .)

    listaIdParentesis              shift and go to state 45
    empty                          shift and go to state 46

state 31

    (121) simboloPor -> empty .
    (               reduce using rule 121 (simboloPor -> empty .)
    ;               reduce using rule 121 (simboloPor -> empty .)


state 32

    (122) simboloPor -> * .
    (               reduce using rule 122 (simboloPor -> * .)
    ;               reduce using rule 122 (simboloPor -> * .)


state 33

    (77) modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT . declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (96) declaracionVariableOUT -> . empty
    (97) declaracionVariableOUT -> . OUT declaracionVariableRecursivo
    (139) empty -> .
    OUT             shift and go to state 50
    VAR             reduce using rule 139 (empty -> .)
    POS             reduce using rule 139 (empty -> .)
    BEGIN           reduce using rule 139 (empty -> .)
    END             reduce using rule 139 (empty -> .)

    declaracionVariableOUT         shift and go to state 48
    empty                          shift and go to state 49

state 34

    (94) declaracionVariableINOUT -> empty .
    OUT             reduce using rule 94 (declaracionVariableINOUT -> empty .)
    VAR             reduce using rule 94 (declaracionVariableINOUT -> empty .)
    POS             reduce using rule 94 (declaracionVariableINOUT -> empty .)
    BEGIN           reduce using rule 94 (declaracionVariableINOUT -> empty .)
    END             reduce using rule 94 (declaracionVariableINOUT -> empty .)


state 35
